--- a/server/package.json
+++ b/server/package.json
@@ -27,21 +27,33 @@
     "dev": "concurrently \"npm run watch:build\" \"nodemon target/server.js\""
   },
   "dependencies": {
+    "@google/genai": "^1.30.0",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.1",
+    "cookie-session": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
-    "mongoose-autopopulate": "^1.2.1"
+    "mongoose-autopopulate": "^1.2.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
+    "@types/cookie-session": "^2.0.49",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
+    "@types/express-session": "^1.18.2",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^24.10.1",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.17",
+    "@types/passport-local": "^1.0.38",
     "concurrently": "^9.2.1",
     "eslint": "^9.39.1",
     "nodemon": "^3.1.11",
