--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.30.0",
+    "@openrouter/sdk": "^0.2.9",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.1",
     "cookie-session": "^2.1.1",
