--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@openrouter/sdk": "^0.2.9",
+    "dotenv": "^17.2.3",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.10.1"
+    "react-router-dom": "^7.10.1",
+    "react-timezone-select": "^3.2.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
